fixed some spacing issues and 2 buttons

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,10 @@ hr:not([size]) {
   max-height: 78vh;
 }
 
+.answer .card-title.h5 {
+  width: 130% !important;
+}
+
 /* 
 pink: #db278d
 red: #f14e48
